# cpp-experiments

./: .gitignore  CMakeLists.txt  README.md
00-Common/: CMakeLists.txt
00-Common/Utils/: Cube.hpp  ObjectData.hpp
01-GUI/: CMakeLists.txt  main.cpp  metalUtil.h  metalUtil.mm
01-Metal-GUI/: CMakeLists.txt
02-OpenGL-GUI/: CMakeLists.txt  main.cpp
03-Vulkan-GUI/: CMakeLists.txt  main.cpp
10-Metal-Rendering/: CMakeLists.txt  main.cpp  shader.metal
20-BundleJava/: CMakeLists.txt  main.cpp
30-ArgParsing/: Args.cpp  Args.hpp  CMakeLists.txt  main.cpp
cmake/: detect-platform.cmake  glad.cmake  glfw.cmake  image-cpp.cmake  imgui.cmake  math-cpp.cmake  mathlib.cmake  metal-cpp.cmake  openjdk.cmake  stb.cmake  vulkan.cmake
